# paceman_alfa

./: CMakeLists.txt  README.md  main.cpp
Game_logic/: Observer.h  World.cpp  World.h
Game_logic/Entities/: EntityModel.cpp  EntityModel.h  Subject.h
Game_logic/Entities/Collectable/: Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  Fruit.cpp  Fruit.h
Game_logic/Entities/Ghost/: Ghost.cpp  Ghost.h
Game_logic/Entities/PacMan/: PacMan.cpp  PacMan.h
Game_logic/Entities/Wall/: Wall.cpp  Wall.h
Game_logic/Factory/: EntityFactory.cpp  EntityFactory.h
Game_logic/Utils/: Map.json  Position.cpp  Position.h  Random.h  Stopwatch.h  Vector2.cpp  json.hpp
Game_representation/: EntityView.cpp  EntityView.h
